--- a/templates/mainpage/contact.html
+++ b/templates/mainpage/contact.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>КОНТАКТЫ</title>
 </head>
 <body>
-		<h1>The is test page></h1>
+	<h2>{{header}}</h2>
+	<p>{{message}}</p>
 </body>
 </html>
