--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -40,27 +40,10 @@
 
 
 <!-- Section 2 4 5 6 START-->
-					<section id="banner">
-						<div class="content">
-							<header>
-								 
-								<h1>{% block post_title %}.{% endblock %}</h1>
-								<p>Автор {% block post_time %}.{% endblock %}</p>
-							</header>
-							<p>{% block post_body %}{% endblock %}</p>
-							<ul class="actions">
-								<li><a href=# class="button big">Learn More</a></li>
-							</ul>
-						</div>
-						<!--
-						<span class="image object">
-							  <img src="{% static "images/pic10.jpg" alt="" %}" />
-						</span>
-					-->
-					</section>
-					</div>
-					</div>
-<!-- Section 2 4 5 6 END-->
+{% block content %}
+	{{content}}
+{% endblock %}
+<!-- Sectcion 2 4 5 6 END-->
 
 				<!-- Sidebar -->				
 					<div id="sidebar">
