add list_post, add get_absolute_url=slug

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -62,9 +62,10 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
+										<li><a href="index">Home Page</a></li>
+										<li><a href="list_post">List Post</a></li>
+										<li><a href="new_post">New Post</a></li>
+										<!--
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
@@ -88,6 +89,7 @@
 										<li><a href="#">Maximus Erat</a></li>
 										<li><a href="#">Sapien Mauris</a></li>
 										<li><a href="create.html">CREATE POST</a></li>
+									-->
 									</ul>
 								</nav>
 
