--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -65,6 +65,7 @@
 										<li><a href="index">Home Page</a></li>
 										<li><a href="list_post">List Post</a></li>
 										<li><a href="new_post">New Post</a></li>
+										<li><a href="about_blog">About This Blog</a></li>
 										<!--
 										<li>
 											<span class="opener">Submenu</span>
