WTF with new_post about_blog

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -62,10 +62,10 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index">Home Page</a></li>
-										<li><a href="list_post">List Post</a></li>
-										<li><a href="new_post">New Post</a></li>
-										<li><a href="about_blog">About This Blog</a></li>
+										<li><a href="http://127.0.0.1:8000/index">Home Page</a></li>
+										<li><a href="http://127.0.0.1:8000/list_post">List Post</a></li>
+										<li><a href="http://127.0.0.1:8000/new_post">New Post</a></li>
+										<li><a href="http://127.0.0.1:8000/about_blog">About This Blog</a></li>
 										<!--
 										<li>
 											<span class="opener">Submenu</span>
