add news_blog, post in read_post

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -66,6 +66,8 @@
 										<li><a href="http://127.0.0.1:8000/list_post">List Post</a></li>
 										<li><a href="http://127.0.0.1:8000/new_post">New Post</a></li>
 										<li><a href="http://127.0.0.1:8000/about_blog">About This Blog</a></li>
+										<li><a href="http://127.0.0.1:8000/news_blog">News Blog</a></li>
+
 										<!--
 										<li>
 											<span class="opener">Submenu</span>
