--- a/templates/index.html
+++ b/templates/index.html
@@ -62,11 +62,12 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="http://127.0.0.1:8000/index">Home Page</a></li>
-										<li><a href="http://127.0.0.1:8000/list_post">List Post</a></li>
-										<li><a href="http://127.0.0.1:8000/new_post">New Post</a></li>
-										<li><a href="http://127.0.0.1:8000/about_blog">About This Blog</a></li>
-										<li><a href="http://127.0.0.1:8000/news_blog">News Blog</a></li>
+										<li><a href="http://127.0.0.1:8000/blog/log_in">Log In</a></li>
+										<li><a href="http://127.0.0.1:8000/blog/index">Home Page</a></li>
+										<li><a href="http://127.0.0.1:8000/blog/list_post">List Post</a></li>
+										<li><a href="http://127.0.0.1:8000/blog/new_post">New Post</a></li>
+										<li><a href="http://127.0.0.1:8000/blog/about_blog">About This Blog</a></li>
+										<li><a href="http://127.0.0.1:8000/blog/news_blog">News Blog</a></li>
 
 										<!--
 										<li>
