--- a/templates/index.html
+++ b/templates/index.html
@@ -16,14 +16,15 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!-- syntax highlighter -->
-		<link rel="stylesheet"
-			href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
+		
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
 		<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 		<script src="/static/base/js/main.js"></script>
 		<script>hljs.initHighlightingOnLoad();</script>
 	</head>
 	<body>
 
+	
 		<!-- Wrapper -->
 			<div id="wrapper">
 
@@ -34,7 +35,7 @@
 							<!-- Header -->
 
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="{% url 'index' %}" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
 									<ul class="icons">
 										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -45,11 +46,11 @@
 								</header>
 
 
-<!-- Section 2 4 5 6 START-->
-{% block content %}
-	{{content}}
-{% endblock %}
-<!-- Sectcion 2 4 5 6 END-->
+			<!-- Section 2 4 5 6 START-->
+			{% block content %}
+				{{content}}
+			{% endblock %}
+			<!-- Sectcion 2 4 5 6 END-->
 
 				<!-- Sidebar -->				
 					<div id="sidebar">
@@ -75,31 +76,6 @@
 										<li><a href="{% url 'about_blog' %}">About This Blog</a></li>
 										<li><a href="{% url 'news_blog' %}">News Blog</a></li>
 
-										<!--
-										<li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="create.html">CREATE POST</a></li>
-									-->
 									</ul>
 								</nav>
 
@@ -115,13 +91,5 @@
 					</div>
 
 			</div>
-		<!-- Scripts
-
-			<script src={% static "blog/js/jquery.min.js" %}></script>
-			<script src={% static "blog/js/skel.min.js" %}></script>
-			<script srv={% static "blog/js/util.js" %}></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]
-			<script src={% "blog/js/main.js"% }></script>
-			 -->
 	</body>
 </html>
