--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default">  <!--.navbar-fixed-top #} -->
   <div class="container">
     <!-- Brand и toggle сгруппированы для лучшего отображения на мобильных дисплеях -->
     <div class="navbar-header">
@@ -54,19 +54,17 @@
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
-
       </li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
-  {% for tag in cloud %}
-    <a href="{% url 'list_post_by_tag' tag.slug %}"> <span class="label label-info"> {{ tag.name }} {{ tag.num_times }}</a></span>
-  
-  {% endfor %}
   </div><!-- /.container-fluid -->
 </nav>
-
-
+<div class="container">
+  {% for tag in cloud %}
+    <a href="{% url 'list_post_by_tag' tag.slug %}"> <span class="label label-info"> {{ tag.name }} {{ tag.num_times }}</a></span>
+  {% endfor %}
+ </div>
 
 
     <div class="container">
