--- a/templates/base.html
+++ b/templates/base.html
@@ -41,31 +41,38 @@
     <!-- Соберите навигационные ссылки, формы, и другой контент для переключения -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'log_in' %}">Log In</a></li>
         <li><a href="{% url 'list_post' %}">List Post</a></li>
         <li><a href="{% url 'new_post' %}">New Post</a></li>
         <li><a href="{% url 'about_blog' %}">About This Blog</a></li>
         <li><a href="{% url 'news_blog' %}">News Blog</a></li>
      </ul>
 
-      <form class="navbar-form navbar-right">
+      <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+            <button class="btn btn-default" type="submit">
+              <i class="glyphicon glyphicon-search"></i>
+            </button>
+         </div>
       </form>
-      </li>
-      </ul>
-
+    
+      <ul class="nav navbar-nav navbar-right">
+      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="{% url 'log_in' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+    </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
 <div class="container">
   {% for tag in cloud %}
     <a href="{% url 'list_post_by_tag' tag.slug %}"> <span class="label label-info"> {{ tag.name }} {{ tag.num_times }}</a></span>
   {% endfor %}
  </div>
 
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
     <div class="container">
 
