--- a/templates/base.html
+++ b/templates/base.html
@@ -57,9 +57,12 @@
       </form>
     
       <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+      <li><a href="{% url 'sing_up' %}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="{% url 'log_in' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
+      <li><a class="nav-link" href="{% url 'log_in' %}">{{ user.username }}</a></li>
+      </ul>
+     </div>
+    
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
