add def sing_up, log_in, log_out its work

--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
       <ul class="nav navbar-nav navbar-right">
       <li><a href="{% url 'sing_up' %}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="{% url 'log_in' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      <li><a class="nav-link" href="{% url 'log_in' %}">{{ user.username }}</a></li>
+      <li><a class="nav-link" href="{% url 'log_out' %}">{{ user.username }}</a></li>
       </ul>
      </div>
     
