--- a/templates/test_bootstrap.html
+++ b/templates/test_bootstrap.html
@@ -49,7 +49,9 @@
         -->
 
         <li><a href="{% url 'list_post' %}">List Post</a></li>
+        {% if request.user.is_authenticated %}
         <li><a href="{% url 'new_post' %}">New Post</a></li>
+        {% endif %}
         <li><a href="{% url 'about_blog' %}">About This Blog</a></li>
         <li><a href="{% url 'news_blog' %}">News Blog</a></li>
         
