--- a/templates/test_bootstrap.html
+++ b/templates/test_bootstrap.html
@@ -36,7 +36,6 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'log_out' %}">{{ user.username }}</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -77,10 +76,19 @@
       </form>
       
       <ul class="nav navbar-nav navbar-right">
-      <li><a href="{% url 'sing_up' %}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="{% url 'log_in' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
+      {% if request.user.is_authenticated %}
 
+      <li><a href=""><span class="glyphicon glyphicon-user"></span> {{ user.username }}</a></li>
+      <li><a href="{% url 'log_out' %}"><span class="glyphicon glyphicon-log-out"></span></a></li>
+
+      {% endif %}
+      
+      {% if request.user.is_anonymous %}
+      <li><a href="{% url 'sing_up' %}"><span class="glyphicon glyphicon-new-window"></span> SignUp</a></li>
+      <li><a href="{% url 'log_in' %}"><span class="glyphicon glyphicon-log-in"></span> LogIn</a></li>
+      {% endif %}
+      </ul>
+<!--
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
