--- a/templates/test_bootstrap.html
+++ b/templates/test_bootstrap.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+
 {% load staticfiles %}
 <html lang="en">
   <head>
@@ -6,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Bootstrap 101 Template</title>
+    <title>Training project 'Blog'</title>
 
 <link rel="stylesheet" href="{% static "/blog/css/min.css" %}"/> 
 
