--- a/templates/test_bootstrap.html
+++ b/templates/test_bootstrap.html
@@ -40,13 +40,13 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
-
+        <li><a href="{% url 'index' %}">Home Page</a></li>
         <li><a href="{% url 'list_post' %}">List Post</a></li>
         {% if request.user.is_authenticated %}
         <li><a href="{% url 'new_post' %}">New Post</a></li>
         {% endif %}
-        <li><a href="{% url 'about_blog' %}">About This Blog</a></li>
-        <li><a href="{% url 'news_blog' %}">News Blog</a></li>
+       <!-- <li><a href="{% url 'about_blog' %}">About This Blog</a></li> -->
+        <!--<li><a href="{% url 'news_blog' %}">News Blog</a></li> -->
       </ul>
      
        <form class="navbar-form navbar-left" role="search" action="{% url 'list_post' %}">
